# image-search

./: .gitignore  Dockerfile  Dockerfile-base  DockerfileTest  README.md  add-db-revision.sh  alembic.ini  docker-compose-test.yaml  docker-compose.yaml  prep-base.sh  prep-images.sh  pyproject.toml  run-test.sh  run-tests.sh
alembic/: env.py
alembic/versions/: 052cdd8b7f76_initial_migration.py  5c467baa75dd_.py  63cad359d504_.py  9b88e88dab03_.py
image_search/: worker.py
image_search/common/: db_handler.py  db_model.py  settings.py  vector_and_cache.py
image_search/image/: dal.py  model.py  processing.py
image_search/image/vector_search_methods/: histogram.py  main.py  resnet.py
image_search/webapp/: dependencies.py  main.py  model.py
nginx/: nginx.conf
tests/: conftest.py  test_inner_image_testing.py
tests/image/: test_dal.py
tests/image/test_processing/: test_main.py
tests/webapp/: test_main.py
