[tool.poetry]
name = "focal"
version = "0.1.0"
authors = ["Kris Urbanczyk"]
readme = "README.md"
description = "focal test app"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
mysql-connector-python = "^8.1.0"
taskiq = "^0.10.0"
aioredis = "^2.0.1"
sqlalchemy = "^2.0.0"
alembic = "^1.11.1"
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Define a script to run alembic migrations
run_migrations = "alembic.config:main"

# Define a script to start the FastAPI server
start_fastapi = "uvicorn:main"

# Define a script to start the Taskiq worker
start_worker = "taskiq_worker:main"
